# Flugbuch

./: CMakeLists.txt  resources.qrc  style.css
app/: CMakeLists.txt  main.cpp
core/: CMakeLists.txt
core/domain/: Flight.cpp  Flight.h  Flight.test.cpp  Location.cpp  Location.h  Location.test.cpp  Plane.cpp  Plane.h  Plane.test.cpp
core/persistence/: AbstractStore.h
core/persistence/sqlite/: SqLiteStore.cpp  SqLiteStore.h  SqLiteStore.test.cpp
scripts/: thirdparty.cmake
widgets/: CMakeLists.txt  FlightDialog.cpp  FlightDialog.h  FlightDialog.ui  FlightListModel.cpp  FlightListModel.h  LocationDialog.cpp  LocationDialog.h  LocationDialog.ui  LocationListModel.cpp  LocationListModel.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  PlaneDialog.cpp  PlaneDialog.h  PlaneDialog.ui  PlaneListModel.cpp  PlaneListModel.h  map.qml
